--- a/app/public/css/bootstrap.css
+++ b/app/public/css/bootstrap.css
@@ -10,8 +10,15 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
+  background: url("downloads/futurama.jpg") no-repeat;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
   margin: 0;
 }
+
+
 article,
 aside,
 details,
@@ -62,6 +69,7 @@ dfn {
 h1 {
   margin: .67em 0;
   font-size: 2em;
+
 }
 mark {
   color: #000;
@@ -1619,6 +1627,8 @@ pre code {
   padding-right: 15px;
   padding-left: 15px;
 }
+
+
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
 }
@@ -2085,7 +2095,7 @@ pre code {
     margin-left: 16.66666667%;
   }
   .col-md-offset-1 {
-    margin-left: 8.33333333%;
+    margin-left: 10px;
   }
   .col-md-offset-0 {
     margin-left: 0;
@@ -4496,7 +4506,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: rgba(245, 245, 245, 0.9);
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
@@ -5818,6 +5828,27 @@ button.list-group-item-danger.active:focus {
 }
 .embed-responsive-4by3 {
   padding-bottom: 75%;
+}
+.well-dash {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: rgba(245, 245, 245, 0.9);
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+.well-robot {
+  min-height: 20px;
+  padding: 19px;
+  margin: 10px;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.87);
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 .well {
   min-height: 20px;
