--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to Robot World!</h1>
-<h3>Beep boop, boop boop beep!</h3>
+
+  <h1 class=''>Welcome to Robot World!</h1>
+<h3 class=''>Beep boop, boop boop beep!</h3>
+</div>
