--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,16 +5,16 @@
   <title>Robot World</title>
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar-default col-md-12">
     <div class="container-fluid">
-      <div class="navbar-header">
+      <!-- <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-      </div>
+      </div> -->
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -25,6 +25,10 @@
       </div>
     </div>
   </nav>
+  <br>
+  <br><br>
+  <div class="well-dash text-center">
   <%= yield %>
+
 </body>
 </html>
