--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,4 +1,19 @@
-<img src="https://robohash.org/<%= @robot.id %>">
-<h2>This is <%= @robot.name %>!</h2>
-<p><%= @robot.name %> is from <%= @robot.city %>, <%= @robot.state %> and is <%= @robot.age %> years old.<p>
-<p>They have been working in the <%= @robot.dept %> Department since <%= @robot.hired %>.
+<h1>This is <%= @robot.name %>!</h1>
+</div>
+<div class="container col-md-offset-2">
+
+<div class="row well-robot col-md-10">
+
+  <div class="col-md-6">
+    <img src="https://robohash.org/<%= @robot.id %>" alt="robot pic" class="center-block">
+  </div>
+  <div class="col-md-6">
+    <br><br>
+    <p><h3><%= @robot.name %> is from <%= @robot.city %>, <%= @robot.state %> and is <%= @robot.age %> years old.<p>
+    <p>They have been working in the <%= @robot.dept %> Department since <%= @robot.hired %>.</h3>
+ </div>
+
+
+</div>
+
+</div>
