--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,4 +1,6 @@
-<h1>Robot Generator</h1>
+<br><br><br>
+<div class="well-dash text-center">
+  <h1><strong>Robot Generator</strong></h1>
 <h3>Customize your robot or leave field(s) blank to randomly generate!</h3>
 </div>
 
@@ -6,10 +8,10 @@
   <div class="well-robot col-md-10">
 <form class="form-group" action="/robots" method="post">
       <label for="robotname">Robot Name</label>
-    <input type="text" class="form-control" id="robotname" placeholder="ex: Henrietta" name="robot[name]">
+    <input type="text" class="form-control" id="robotname" name="robot[name]">
     <br>
     <label for="robotcity">City Robot Is From</label>
-  <input type="text" class="form-control" id="robotcity" placeholder="ex: Denver" name="robot[city]">
+  <input type="text" class="form-control" id="robotcity" name="robot[city]">
   <br>
   <label for="robotstate">State Robot Is From</label>
 <input type="text" class="form-control" id="robotstate" name="robot[state]">
