--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,4 +1,5 @@
-
-  <h1 class=''>Welcome to Robot World!</h1>
-<h3 class=''>Beep boop, boop boop beep!</h3>
-</div>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="well-dash text-center">
+<h1><strong>Welcome to Robot World</strong>!</h1>
+<h3>Choose an option from the menu above.</h3>
+<h4>Beep boop, boop boop beep!</h4>
