--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,4 +1,6 @@
-<h1>This is <%= @robot.name %>!</h1>
+<br><br><br>
+<div class="well-dash text-center">
+  <h1><strong>This is <%= @robot.name %>!</strong></h1>
 </div>
 <div class="container col-md-offset-2">
 
@@ -8,9 +10,11 @@
     <img src="https://robohash.org/<%= @robot.id %>" alt="robot pic" class="center-block">
   </div>
   <div class="col-md-6">
-    <br><br>
+    <br>
     <p><h3><%= @robot.name %> is from <%= @robot.city %>, <%= @robot.state %> and is <%= @robot.age %> years old.<p>
     <p>They have been working in the <%= @robot.dept %> Department since <%= @robot.hired %>.</h3>
+      <br>
+      <a class="btn btn-primary" href="/robots/<%= @robot.id %>/edit">Edit <%=@robot.name%>'s Information</a>
  </div>
 
 
