--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,10 @@
 <br><br><br>
 <div class="well-dash text-center">
-  <h1><strong>All Robots</strong></h1>
+  <h1 id="title"><strong>All Robots</strong></h1>
 </div>
 
 <div class="container center">
-  <div class="row col-md-offset-2 text-center">
+  <div id="robot_list" class="row col-md-offset-2 text-center">
   <% @robots.each do |robot|%>
 
 <div class="well-robot col-md-3">
