more feature testing

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,7 @@
 <br><br><br>
 <div class="well-dash text-center">
-  <p><strong>Edit Robot</strong></p>
+  <h1 id="title"><p><strong>Edit Robot</strong></p></h1>
+  <p><h3>Blank fields will be randomly generated!</h3></p>
 </div>
 
 <div class="container col-md-offset-2">
