added some stats

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,9 +19,10 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a  href="/robots">Meet the Robots</a></li>
-          <li><a href="/robots/new">Create a Robot</a></li>
+          <li><a href="/">Home - </a></li>
+          <li><a  href="/robots">Meet the Robots - </a></li>
+          <li><a href="/robots/new">Create a Robot - </a></li>
+          <li><a href="/about">Robot World Statitics</a></li>
         </ul>
       </div>
     </div>
