--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,20 +9,12 @@
   <nav class="navbar navbar-default navbar-fixed-top col-md-12 col-xs-12">
     <div class="container-fluid">
       <div class="navbar-header">
-        <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div> -->
-
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/">Home - </a></li>
           <li><a  href="/robots">Meet the Robots - </a></li>
           <li><a href="/robots/new">Create a Robot - </a></li>
-          <li><a href="/about">Robot World Statitics</a></li>
+          <li><a href="/about">Robot World Statistics</a></li>
         </ul>
       </div>
     </div>
