--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to Robot World!</h1>
-<h3>Beep boop, boop boop beep!</h3>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="well-dash text-center">
+<h1><strong>Welcome to Robot World</strong>!</h1>
+<h3>Choose an option from the menu above.</h3>
+<h4>Beep boop, boop boop beep!</h4>
