--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,13 +1,22 @@
-<h1>All Robots</h1>
+<br><br><br>
+<div class="well-dash text-center">
+  <h1 id="title"><strong>All Robots</strong></h1>
+</div>
 
-<ol>
+<div class="container center">
+  <div id="robot_list" class="row col-md-offset-2 text-center">
   <% @robots.each do |robot|%>
-  <li><a href="/robots/<%= robot.id %>"><%= robot.name %></a>
-  <a href="/robots/<%= robot.id %>/edit">Edit</a>
+
+<div class="well-robot col-md-3">
+    <img class="col-md-offset-1 col-xs-10" src="https://robohash.org/<%= robot.id %>" alt="random robot pic">
+    <h4 class=""><a href="/robots/<%= robot.id %>"><%= robot.name %></a></h4>
+  <div class="row col-md-3"><a class="btn btn-primary btn-sm" href="/robots/<%= robot.id %>/edit">Edit</a>
   <form class="" action="/robots/<%= robot.id %>" method="post">
     <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete">
-  </form>
-</li>
+    <input class="btn btn-primary btn-sm" type="submit" value="Delete">
+  </form></div>
+</div>
+
  <% end %>
- </ol>
+ </div>
+ </div>
